<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FactsActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:padding="16dp"
        android:src="@drawable/facts_ilb"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="About Bareilly"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium"
        android:text="@string/facts_about_bly"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Facts and Figures"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@android:color/black"/>
    <TextView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium"
        android:text="@string/facts_and_figures"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="Interesting Trivia"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="@android:color/black"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/facts_jhumka"/>

    <TextView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium"
        android:text="@string/jhumka"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/facts_haunted"/>

    <TextView
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ghost_story"
        />



</LinearLayout>
</ScrollView>